Bug 487754 - Problems building qcms on FreeBSD. r=jrmuizel